# motifNet

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
configs/: default.yaml  hydra.yaml  motif_task_loader.yaml  rnn.yaml  train.yaml
configs/experiments/: AllTasks.yaml  ContextIntModality.yaml  ContextIntModality1.yaml  ContextIntModality2.yaml  Delayed.yaml  DelayedAnti.yaml  DelayedPro.yaml  IntegrationModality1.yaml  IntegrationModality2.yaml  IntegrationMultiModal.yaml  Memory.yaml  MemoryAnti.yaml  MemoryPro.yaml  React.yaml  ReactAnti.yaml  ReactCategory.yaml  ReactCategoryAnti.yaml  ReactCategoryPro.yaml  ReactMatch2Sample.yaml  ReactNonMatch2Sample.yaml  ReactPro.yaml
configs/hydra/: default.yaml
configs/hydra/launcher/: local.yaml  submitit_slurm.yaml
configs/network/: default.yaml
configs/task_loader/: default.yaml
experiments/: experiment.py  task_init.py
motif_net/: default_config.yaml  experiment.py  find_fixed_points.py  main.py  network.py  plot.py  task_init.py  tasks.py  train.py  two_task.py  utils.py
motif_net/FixedPointFinder/: FixedPointFinderBase.py  FixedPointFinderTorch.py  FixedPoints.py  LICENSE  __init__.py  plot_utils.py
motif_net/experimenting/: experiment.py
motif_net/experiments/: experiment.py
motif_net/future/: submit_slurm.sh
motif_net/task_data/: task_init.py  tasks.py
notebooks/: plot_view.ipynb
src/motifnet/: __init__.py  find_fixed_points.py  network.py  plot.py  tasks.py  train.py  utils.py
src/motifnet/FixedPointFinder/: __init__.py  plot_utils.py  torch_utils.py
src/motifnet/future/: variance.py
tests/: test_config.py
