[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "motif_net"
version = "0.0.1"
description = "Playing around with RNNs to look at patterns in activity"
authors = [
  { name = "Rushil Chakrabarty" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "pip",
    "pytest",
    "python-dotenv",
]
requires-python = ">=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["motif_net"]
force_sort_within_sections = true


