[project]
name = "motifnet"
version = "0.1.0"
description = "Implementation of \"Flexible Multitask Computation in Recurrent Networks Utilizes Shared Dynamical Motifs\" (Driscoll et al 2024)"
readme = "README.md"
authors = [
    { name = "rushil.chakra", email = "rushil.chakra@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.9",
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pydantic>=2.13.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "sphinx>=9.1.0",
    "ty>=0.0.34",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.ruff.lint]
# pycodestyle, Pyflakes, isort
select = ["E", "F", "I"]
